fixed alignment issue

--- a/src/app/components/core/north/north-task-modal/north-task-modal.component.css
+++ b/src/app/components/core/north/north-task-modal/north-task-modal.component.css
@@ -90,5 +90,5 @@ a { color: black; }
 
 .help-icon {
   cursor: pointer !important;
-  padding-top: 1.5rem;
+  padding-top: 1rem;
 }
