--- a/src/app/components/core/south/south-service-modal/south-service-modal.component.css
+++ b/src/app/components/core/south/south-service-modal/south-service-modal.component.css
@@ -89,5 +89,5 @@ a { color: black; }
 
 .help-icon {
   cursor: pointer !important;
-  padding-top: 1.5rem;
+  padding-top: 1rem;
 }
